--- a/pom.xml
+++ b/pom.xml
@@ -72,5 +72,10 @@
 		<artifactId>slf4j-simple</artifactId>
 		<version>1.5.6</version>
 	</dependency>
+	<dependency>
+		<groupId>commons-httpclient</groupId>
+		<artifactId>commons-httpclient</artifactId>
+		<version>3.1</version>
+	</dependency>        
   </dependencies>
 </project>
