--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,16 @@
   	<developer>
   		<id>narock</id>
   		<name>Tom Narock</name>
-  		<email>Thomas.W.Narock@nasa.gov</email>
+  		<email>tnarock@marymount.edu</email>
   	</developer>
   </developers>
+  <repositories>
+    <repository>
+      <id>maven-repository</id>
+      <name>Maven Repository</name>
+      <url> http://repo1.maven.org/maven2/</url>
+    </repository>
+  </repositories>
   <build>
   	<plugins>
   		<plugin>
